Add last minute thought before hitting the books.
Study time.

--- a/TODO
+++ b/TODO
@@ -7,3 +7,7 @@
     if valid.flag: CONFIG["FLAG"] = not CONFIG["FLAG"]
 * Research what happens when one flag is supplied multiple times with
     optparse
+* Add -d flag to allow a user to use a different directory (allows 
+    for multiple, non-intersecting, todo.txt files with different remote
+    repositories, i.e. one for work, one for one project, one for another,
+    etc.)
