--- a/TODO
+++ b/TODO
@@ -1,3 +1,14 @@
 # Ironic that a project about managing a todo.txt file has a TODO text file
 
 Look into mmap.
+```python
+> import mmap, re
+> f = open(CONFIG['TODO_TXT'], 'r+')
+> m = mmap.mmap(f.fileno(), 0)
+> m[:]
+"Testing 123\n(A) Test 345\n"
+> m = re.sub('esting', 'ested', m)
+> m.close()
+> f.close()
+```
+
